--- a/backend/package.json
+++ b/backend/package.json
@@ -2,7 +2,6 @@
   "name": "backend",
   "version": "1.0.0",
   "description": "",
-  "type": "module",
   "main": "index.js",
   "scripts": {
     "start": "nodemon index.js"
@@ -12,5 +11,11 @@
   "dependencies": {
     "express": "^4.19.2",
     "nodemon": "^3.1.0"
+  },
+  "devDependencies": {
+    "@nomicfoundation/hardhat-ethers": "^3.0.5",
+    "@nomicfoundation/hardhat-ignition-ethers": "^0.15.1",
+    "ethers": "^6.12.0",
+    "hardhat": "^2.22.3"
   }
 }
