--- a/backend/package.json
+++ b/backend/package.json
@@ -14,11 +14,13 @@
     "express": "^4.19.2",
     "express-fileupload": "^1.5.0",
     "ipfs-http-client": "^60.0.1",
-    "nodemon": "^3.1.0"
+    "nodemon": "^3.1.0",
+    "openzeppelin-solidity": "^3.4.2"
   },
   "devDependencies": {
     "@nomicfoundation/hardhat-ethers": "^3.0.5",
     "@nomicfoundation/hardhat-ignition-ethers": "^0.15.1",
+    "@openzeppelin/contracts": "4.9.2",
     "ethers": "^6.12.0",
     "hardhat": "^2.22.3"
   }
