--- a/backend/package.json
+++ b/backend/package.json
@@ -13,6 +13,7 @@
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "express-fileupload": "^1.5.0",
+    "formidable": "^3.5.1",
     "ipfs-http-client": "^60.0.1",
     "nodemon": "^3.1.0",
     "openzeppelin-solidity": "^3.4.2"
