--- a/backend/package.json
+++ b/backend/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon index.js"
+    "start": "nodemon index.js",
+    "test": "jest"
   },
   "author": "",
   "license": "ISC",
@@ -15,10 +16,12 @@
     "express-fileupload": "^1.5.0",
     "formidable": "^3.5.1",
     "ipfs-http-client": "^60.0.1",
+    "jest": "^29.7.0",
     "nodemon": "^3.1.0",
     "openzeppelin-solidity": "^3.4.2"
   },
   "devDependencies": {
+    "@nomicfoundation/hardhat-chai-matchers": "2.0.0",
     "@nomicfoundation/hardhat-ethers": "^3.0.5",
     "@nomicfoundation/hardhat-ignition-ethers": "^0.15.1",
     "@openzeppelin/contracts": "4.9.2",
