--- a/backend/package.json
+++ b/backend/package.json
@@ -18,7 +18,8 @@
     "ipfs-http-client": "^60.0.1",
     "jest": "^29.7.0",
     "nodemon": "^3.1.0",
-    "openzeppelin-solidity": "^3.4.2"
+    "openzeppelin-solidity": "^3.4.2",
+    "socket.io": "^4.7.5"
   },
   "devDependencies": {
     "@nomicfoundation/hardhat-chai-matchers": "2.0.0",
